--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Book Aesthetic</title>
 </head>
 <body>
-    <h1></h1>
-    <p>
-
-    </p>
+    <h1>Book Art</h1>
+    <p>Magna sit amet purus gravida quis blandit. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt. Lacus vel facilisis volutpat est velit egestas dui id. Suspendisse interdum consectetur libero id faucibus. Odio ut sem nulla pharetra diam sit.</p>
+    <img src="file://null">
 </body>
 </html>
